--- a/central/pom.xml
+++ b/central/pom.xml
@@ -33,19 +33,19 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.3.158</version>
+			<version>1.3.161</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.mycila.testing.plugins</groupId>
 			<artifactId>mycila-testing-easymock</artifactId>
-			<version>2.8</version>
+			<version>2.9.ga</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.mycila.testing.plugins</groupId>
 			<artifactId>mycila-testing-guice2</artifactId>
-			<version>2.8</version>
+			<version>2.9.ga</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -75,19 +75,19 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-c3p0</artifactId>
-			<version>3.6.5.Final</version>
+			<version>3.6.8.Final</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>3.6.5.Final</version>
+			<version>3.6.8.Final</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>3.6.5.Final</version>
+			<version>3.6.8.Final</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
