--- a/instance/pom.xml
+++ b/instance/pom.xml
@@ -17,19 +17,19 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava-gwt</artifactId>
-			<version>r09</version>
+			<version>10.0.1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
-			<version>2.3.0</version>
+			<version>2.4.0</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
-			<version>2.3.0</version>
+			<version>2.4.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -53,13 +53,13 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.3.158</version>
+			<version>1.3.161</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.mycila.testing.plugins</groupId>
 			<artifactId>mycila-testing-guice2</artifactId>
-			<version>2.8</version>
+			<version>2.9.ga</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -115,19 +115,19 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-c3p0</artifactId>
-			<version>3.6.5.Final</version>
+			<version>3.6.8.Final</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>3.6.5.Final</version>
+			<version>3.6.8.Final</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>3.6.5.Final</version>
+			<version>3.6.8.Final</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -139,13 +139,13 @@
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.6.0</version>
+			<version>1.6.1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
-			<version>1.6.1</version>
+			<version>1.6.4</version>
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
@@ -164,7 +164,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.3.0-1</version>
+				<version>2.4.0</version>
 				<executions>
 					<execution>
 						<goals>
